tests/ui/01-fail-missing-repr.stderr
error: proc-macro derive panicked
 --> tests/ui/01-fail-missing-repr.rs:5:10
  |
5 | #[derive(ConstEnum)]
  |          ^^^^^^^^^
  |
  = help: message: repr attribute not found on enum
